настройка проекта с зависимостями серверов и работа с бд для создания пользователя

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;port=3306;database=bd;uid=root;password=1;Trusted_Connection=True;"
+        "DefaultConnection": "server=localhost;port=3306;database=bd;uid=root;password=1;"
     },
     "Register": true, // требуется ли api регистрации что бы пользователь мог регистрировать в системе сам
     "AuthByRegister": true // требуется ли авторизовывать пользователя который только тчо зарегистрировался
